fix spacing of message div

--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -17,7 +17,7 @@
     margin: 0 auto;
     letter-spacing: 0.04em;
     width: 24em;
-    padding: 0.5em 0 0 1.5em;
+    padding: 0 0 0 1.5em;
 }
 
 h1 {
